0.18 2023-03-06
  [Prerequirement Changes]
    * SPVM 0.9695+ is needed.
  [Changes]
    * Removed the unused IO::Util class.
0.17 2023-03-06
  [Changes]
    * The definition of the init method in the IO::File is changed.
      [Before]
      protected method init : void ();
      [After]
      protected method init : void ($options = undef : object[]);
      
0.16 2023-02-14
  [Bug Fix]
    * Fixed the bug that the close method in the IO::File doesn't set the stream undef.
0.15 2023-02-08
  [Prerequirement Changes]
    * SPVM 0.9691+ is needed.
0.14 2022-12-03
  [Prerequrement Changes]
    * SPVM::IO needs SPVM 0.9664+.
    * SPVM::IO needs SPVM::Sys 0.28+.
  [Incompatible Document Changes]
    * Removed the is_io_handlable method in the IO::Handle class in the doc.
      This was removed in the past.
  [Document Improvement]
    * Added the doc of the IO::Handle.
    * Added the doc of the IO::Handle::Interface.
  [Incompatible Changes]
    * Removed the autoflush method in the IO::File class.
    * Removed the get_autoflush in the IO::Handle class.
    * Changed the definitions of the following fields in the IO::Handle class.
      [Before]
      has autoflush : wo byte;
      [After]
      has autoflush : rw byte;
0.13 2022-11-22
  [New Features]
    * Added many methods and some classes.
  [Document Improvement]
    * Documents of many methods and some classes are added.
0.12 2022-11-16
  [Prerequirement Changes]
    * SPVM::IO needs SPVM::Math 0.11.
0.12 2022-11-16
  [Incompatible Changes]
    * The methods in the IO::Socket::INET is moved to the IO::Socket class.
    * Removed IO::Socket::INET. This module will be added in the nearly future.
  [Prerequirement Changes]
    * SPVM::IO needs SPVM 0.9662+.
0.11 2022-11-07
  [Prerequirement Changes]
    * SPVM::IO needs SPVM 0.9661+.
    * SPVM::IO needs SPVM::Sys 0.26+.
  [New Features]
    * Added the IO::Handle::Interface class.
    * Added many methods to IO::File and IO::Handle.
0.10 2022-09-16