@@ -4,8 +4,6 @@ lib/SPVM/IO/File.pm
 lib/SPVM/IO/File.spvm
 lib/SPVM/IO/Handle.pm
 lib/SPVM/IO/Handle.spvm
-lib/SPVM/IO/Handle/Interface.pm
-lib/SPVM/IO/Handle/Interface.spvm
 lib/SPVM/IO/Select.config
 lib/SPVM/IO/Select.pm
 lib/SPVM/IO/Select.spvm
@@ -13,8 +11,6 @@ lib/SPVM/IO/Socket.pm
 lib/SPVM/IO/Socket.spvm
 lib/SPVM/IO/Socket/INET.pm
 lib/SPVM/IO/Socket/INET.spvm
-lib/SPVM/IO/Socket/Interface.pm
-lib/SPVM/IO/Socket/Interface.spvm
 Makefile.PL
 MANIFEST			This list of files
 README.md
