@@ -1,55 +1,0 @@
-class IO::Handle::Interface : interface_t {
-  use Sys::IO::Stat;
-  
-  required method has_interfaces : int ();
-  
-  method blocking_flag : int ();
-
-  method close : int ();
-
-  method eof : int ();
-
-  method fileno : int ();
-
-  method getc : int ();
-
-  method print : int ($string : string);
-
-  method printf : int ($format : string, $args : object[]...);
-
-  method say : int ($string : string);
-  
-  method clearerr : void ();
-
-  method error : int ();
-
-  method flush : int ();
-
-  method truncate : int ($legnth : long);
-
-  method ioctl : int ($request : int, $request_arg = undef : object of Byte|Short|Int|Long|Float|Double|object);
-
-  method ungetc : int ($c : int);
-
-  method sync : int ();
-
-  method stat : int ($stat : Sys::IO::Stat);
-
-  method blocking : void ($blocking : int);
-
-  method fcntl : int ($command : int, $command_arg = undef : object of Int|Sys::IO::Flock|object);
-
-  method write : int ($buffer : string, $length : int, $offset = 0 : int);
-  
-  method read : int ($buffer : mutable string, $length : int, $offset = 0 : int);
-  
-  method syswrite : int ($buffer : string, $length : int, $offset = 0 : int);
-  
-  method sysread : int ($buffer : mutable string, $length : int, $offset = 0 : int);
-
-  method getline : string ();
-  
-  method getlines : string ();
-  
-  method opened : int ();
-}
