@@ -3,6 +3,10 @@
     * SPVM 0.9695+ is needed.
   [Changes]
     * Removed the unused IO::Util class.
+  [Incompatible Changes]
+    * Removed IO::Handle::Interface.
+    * Removed IO::Socket::Interface.
+    * Removed the has_interfaces method in the IO::Handle.
 0.17 2023-03-06
   [Changes]
     * The definition of the init method in the IO::File is changed.
